# MiLiao

./: .cproject  .project  README.md
src/connect_route/: connect_route.cpp
src/core/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  ImConn.cpp  ImConn.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  Log.cpp  Log.h  NetLib.cpp  NetLib.h  OsType.h  PublicDefine.h  ServInfo.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  TokenValidator.h  Util.cpp  Util.h  UtilPdu.cpp  UtilPdu.h  util.h
src/core/http/: HttpParser.cpp  HttpParserWrapper.cpp  HttpParserWrapper.h
src/http_svr/: CMakeLists.txt  Common.h  DBPool.cpp  DBPool.h  HttpConn.cpp  HttpConn.h  HttpQuery.cpp  HttpQuery.h  HttpTask.cpp  HttpTask.h  RouteConfig.cpp  RouteConfig.h  Struct.h  http_svr.cpp  httpsvr.conf
src/http_svr/controller/: ControllerLogin.cpp  ControllerLogin.h
src/http_svr/model/: User.cpp  User.h
src/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.pb.h
src/protocol/src/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto
src/sync_svr/: sync_svr.cpp
src/test/: Client.cpp  Client.h  ClientConn.cpp  ClientConn.h  Common.h  Makefile  PacketCallback.h  SeqAlloctor.cpp  SeqAlloctor.h  test_client.cpp
